mdapi/unpackaged/objects/Basecamp_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Basecamp_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sorting__c</fullName>
        <label>Sorting</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>